modified drop-down forms for parishes

--- a/index.html
+++ b/index.html
@@ -11,6 +11,23 @@
     <h2>Weh Yuh Deh?</h2>
     <form action="/submit" method="post">
 
+        <label for="parish">Parish</label>
+        <select id="parish" name="parish">
+            <option value="ksa">Kingston & St. Andrew</option>
+            <option value="thomas">St. Thomas</option>
+            <option value="portland">Portland</option>
+            <option value="mary">St. Mary</option>
+            <option value="ann">St. Ann</option>
+            <option value="trelawny">Trelawny</option>
+            <option value="james">St. James</option>
+            <option value="hanover">Hanover</option>
+            <option value="westmoreland">Westmoreland</option>
+            <option value="elizabeth">St. Elizabeth</option>
+            <option value="manchester">Manchester</option>
+            <option value="clarendon">Clarendon</option>
+            <option value="catherine">St. Catherine</option>
+        </select>
+
         <label for="location">Location:</label>
         <select id="location" name="location">
             <option value="constant_spring_tax_office">Constant Spring Tax Office</option>
@@ -26,7 +43,10 @@
             <option value="one">1</option>
             <option value="zero">0</option>
         </select>
+
     </form>
+
+    <h2>Add Location</h2>
 
     
 </body>
