--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
         body {
             display: flex;
             flex-direction: column;
+            justify-content: flex-start;
             align-items: center;
-            justify-content: center;
             min-height: 100vh;
             margin: 0;
         }
@@ -18,7 +18,7 @@
 </head>
 <body>
     <h1>InLineJa</h1>
-    <h2>Weh Yuh Deh?</h2>
+    <h2>Where are you?</h2>
     <form action="/submit" method="post">
 
         <label for="parish">Parish</label>
@@ -60,7 +60,7 @@
 
     </form>
 
-    <h2>Add Location</h2>
+    <h2>Add a New Location</h2>
     <form action="/submit" method="post">
         <label for="parish">Parish</label>
         <select id="parish" name="parish">
@@ -79,7 +79,7 @@
             <option value="catherine">St. Catherine</option>
         </select>
 
-        <label for="location">Location</label>
+        <label for="location">Location: </label>
         <input type="text" id="location" name="location" required><br><br>
 
         <input type="submit" value="Submit">
