added button to go to location page

--- a/index.html
+++ b/index.html
@@ -65,6 +65,10 @@
 
     </form>
 
+    <a href="location.html">
+        <button>Explore Location</button>
+    </a>
+
     <h2>Add a New Location</h2>
     <form action="/submit" method="post">
         <label for="parish">Parish</label>
