--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </style>
 </head>
 <body>
-    <h1>InLineJa</h1>
+    <img src="images/Logo.png" alt="Logo">
     <h2>Where are you?</h2>
     <form action="/submit" method="post">
 
