--- a/location.html
+++ b/location.html
@@ -22,7 +22,7 @@
     </style>
 </head>
 <body>
-    <img src="images/Logo.png" alt="Logo">
+    <img src="images/InLineJa_Logo.png" alt="Logo">
     <h1>Location</h1>
     <h2>Crowd Level</h2>
     <h2>Live Chat</h2>
