specified the size of the logo in the .logo class

--- a/index.html
+++ b/index.html
@@ -19,10 +19,14 @@
             flex-direction: column;
             gap: 10px;
         }
+        .logo {
+            width: 100px;
+            height: auto;
+        }
     </style>
 </head>
 <body>
-    <img src="images/InLineJa_Logo.png" alt="Logo">
+    <img src="images/InLineJa_Logo.png" alt="Logo" class="logo">
     <h2>Where are you?</h2>
     <form action="/submit" method="post">
 
