--- a/location.html
+++ b/location.html
@@ -19,10 +19,14 @@
             flex-direction: column;
             gap: 10px;
         }
+        .logo {
+            width: 100px;
+            height: auto;
+        }
     </style>
 </head>
 <body>
-    <img src="images/InLineJa_Logo.png" alt="Logo">
+    <img src="images/InLineJa_Logo.png" alt="Logo" class="logo">
     <h1>Location</h1>
     <h2>Crowd Level</h2>
     <h2>Live Chat</h2>
