--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         }
         form {
             display: flex;
-            flex-direction: column;
+            flex-direction: row;
             gap: 10px;
         }
         .logo {
