moodified crowd level options

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <h2>Where are you?</h2>
     <form action="/submit" method="post">
 
-        <label for="parish">Parish</label>
+        <label for="parish">Parish:</label>
         <select id="parish" name="parish">
             <option value="ksa">Kingston & St. Andrew</option>
             <option value="thomas">St. Thomas</option>
@@ -55,12 +55,11 @@
 
         <label for="crowd">Crowd level</label>
         <select id="crowd" name="crowd">
-            <option value="five">5</option>
+            <option value="five">5 - extremely crowded</option>
             <option value="four">4</option>
-            <option value="three">3</option>
+            <option value="three">3 - moderatelt crowded</option>
             <option value="two">2</option>
-            <option value="one">1</option>
-            <option value="zero">0</option>
+            <option value="one">1 - not crowded</option>
         </select>
 
         <input type="submit" value="Submit">
