changed add a new location to request a new location

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         <button>Explore Location</button>
     </a>
 
-    <h2>Add a New Location</h2>
+    <h3>Request a New Location</h3>
     <form action="/submit" method="post">
         <label for="parish">Parish: </label>
         <select id="parish" name="parish">
