--- a/index.html
+++ b/index.html
@@ -49,8 +49,10 @@
 
         <label for="location">Location:</label>
         <select id="location" name="location">
-            <option value="constant_spring_tax_office">Constant Spring Tax Office</option>
-            <option value="manor_park_kfc">Manor Park KFC</option>
+            <option value="kfc_manor_park">KFC: Manor Park</option>
+            <option value="ncb_constant_spring_road">NCB: Constant Spring Road</option>
+            <option value="scotiabank_constant_spring_road">Scotiabank: Constant Spring Road</option>
+            <option value="tax_office_constant_spring_road">Tax Office: Constant Spring Road</option>
         </select>
 
         <label for="crowd">Crowd level</label>
