removed option to request a new location

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
         <label for="crowd">Crowd level</label>
         <select id="crowd" name="crowd">
-            <option value="five">5 - extremely crowded</option>
+            <option value="five">5 - very crowded</option>
             <option value="four">4</option>
             <option value="three">3 - moderatelt crowded</option>
             <option value="two">2</option>
@@ -72,7 +72,7 @@
         <button>Explore Location</button>
     </a>
 
-    <h3>Request a New Location</h3>
+    <!-- <h3>Request a New Location</h3>
     <form action="/submit" method="post">
         <label for="parish">Parish: </label>
         <select id="parish" name="parish">
@@ -95,7 +95,7 @@
         <input type="text" id="location" name="location" required>
 
         <input type="submit" value="Submit">
-    </form>
+    </form> -->
 
     
 </body>
