--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 </head>
 <body>
     <img src="images/InLineJa_Logo.png" alt="Logo" class="logo">
-    <h2>Where are you?</h2>
+    <h2>Weh yuh deh?</h2>
     <form action="/submit" method="post">
 
         <label for="parish">Parish:</label>
@@ -55,22 +55,9 @@
             <option value="tax_office_constant_spring_road">Tax Office: Constant Spring Road</option>
         </select>
 
-        <label for="crowd">Crowd level</label>
-        <select id="crowd" name="crowd">
-            <option value="five">5 - very crowded</option>
-            <option value="four">4</option>
-            <option value="three">3 - moderatelt crowded</option>
-            <option value="two">2</option>
-            <option value="one">1 - not crowded</option>
-        </select>
-
-        <input type="submit" value="Submit">
+        <input type="submit" value="Explore Location">
 
     </form>
-
-    <a href="location.html">
-        <button>Explore Location</button>
-    </a>
 
     <!-- <h3>Request a New Location</h3>
     <form action="/submit" method="post">
