--- a/index.html
+++ b/index.html
@@ -18,6 +18,12 @@
             display: flex;
             flex-direction: column;
             gap: 10px;
+            padding: 20px 30px;
+            width: 300px;
+            height: 400px;
+            backdrop-filter: blur(50px);
+            border-radius: 5px;
+            border: 1px solid black; 
         }
         .logo {
             width: 200px;
@@ -69,6 +75,8 @@
         <input type="submit" value="Explore Location" class="custom_button">
 
     </form>
+
+    <script></script>
     
 </body>
 </html>
