--- a/index.html
+++ b/index.html
@@ -18,14 +18,8 @@
             display: flex;
             flex-direction: column;
             gap: 10px;
-            padding: 20px 30px;
-            width: 300px;
-            height: 400px;
-            backdrop-filter: blur(50px);
-            border-radius: 5px;
-            border: 1px solid black; 
         }
-        .logo {
+        .custom_image {
             width: 200px;
             height: auto;
         }
@@ -43,8 +37,8 @@
     </style>
 </head>
 <body>
-    <img src="images/InLineJa_Logo.png" alt="Logo" class="logo">
-    <h2>Weh yuh deh?</h2>
+    <img src="images/InLineJa_Logo.png" alt="Logo" class="custom_image">
+    <img src="images/weh_yuh_deh.png" alt="WehYuhDeh" class="custom_image">
     <form action="/submit" method="post">
 
         <label for="parish">Parish:</label>
