--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@
             flex-direction: column;
             gap: 10px;
         }
+        .custom_logo {
+            width: 250px;
+            height: auto;
+        }
         .custom_image {
             width: 200px;
             height: auto;
@@ -32,13 +36,13 @@
             cursor: pointer;
         }
         .custom_button:active {
-            background-color: #FFD700;
+            background-color: black;
         }
     </style>
 </head>
 <body>
-    <img src="images/InLineJa_Logo.png" alt="Logo" class="custom_image">
-    <img src="images/weh_yuh_deh.png" alt="WehYuhDeh" class="custom_image">
+    <img src="images/InLineJa_Logo.png" alt="Logo" class="custom_logo"><br><br>
+    <img src="images/weh_yuh_deh.png" alt="WehYuhDeh" class="custom_image"><br><br>
     <form action="/submit" method="post">
 
         <label for="parish">Parish:</label>
