removed WehYuhDeh image from index.html

--- a/index.html
+++ b/index.html
@@ -42,7 +42,8 @@
 </head>
 <body>
     <img src="images/InLineJa_Logo.png" alt="Logo" class="custom_logo"><br><br>
-    <img src="images/WehYuhDeh.png" alt="WehYuhDeh" class="custom_image"><br>
+    <!-- <img src="images/WehYuhDeh.png" alt="WehYuhDeh" class="custom_image"><br> -->
+    <h2>Weh Yuh Deh?</h2>
     <form action="/submit" method="post">
 
         <label for="parish">Parish:</label>
