--- a/index.html
+++ b/index.html
@@ -42,8 +42,7 @@
 </head>
 <body>
     <img src="images/InLineJa_Logo.png" alt="Logo" class="custom_logo"><br><br>
-    <!-- <img src="images/WehYuhDeh.png" alt="WehYuhDeh" class="custom_image"><br> -->
-    <h2>Weh Yuh Deh?</h2>
+    <img src="images/WehYuhDeh.png" alt="WehYuhDeh" class="custom_image"><br>
     <form action="/submit" method="post">
 
         <label for="parish">Parish:</label>
