--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 <body>
     <img src="images/InLineJa_Logo.png" alt="Logo" class="custom_logo"><br>
     <img src="images/WehYuhDeh.png" alt="WehYuhDeh" class="custom_image"><br>
-    <form action="/submit" method="POST">
+    <form>
 
         <label for="parish">Parish:</label>
         <select id="parish" name="parish">
@@ -109,6 +109,7 @@
                 location: document.getElementById("location").value
             });
             // Show Location's Page
+            alert("See Location!")
         })
 
     </script>
