--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 </head>
 <body>
     <img src="images/InLineJa_Logo.png" alt="Logo" class="custom_logo"><br>
-    <img src="images/WehYuhDeh.png" alt="WehYuhDeh" class="custom_image"><br>
+    <!-- <img src="images/WehYuhDeh.png" alt="WehYuhDeh" class="custom_image"><br> -->
     <form>
 
         <label for="parish">Parish:</label>
