getting the selectedparish in location.html

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                 parish: selectedParish
             });
             // Show Location's Page
-            window.location.href = 'location.html?parish=$selectedParish';
+            window.location.href = 'location.html?parish=${selectedParish}';
         });
 
     </script>
