--- a/location.html
+++ b/location.html
@@ -33,7 +33,7 @@
     <script>
         // Extract the parish from the URL query parameter
         const urlParams = new URLSearchParams(window.location.search);
-        const parish = urlParams.get('parish');
+        const parish = urlParams.get('selectedParish');
 
         // Display the selected parish
         const locationDetails = document.getElementById('location-details');
