--- a/index.html
+++ b/index.html
@@ -62,14 +62,6 @@
             <option value="catherine">St. Catherine</option>
         </select>
 
-        <!-- <label for="location">Location:</label>
-        <select id="location" name="location">
-            <option value="kfc_manor_park">KFC: Manor Park</option>
-            <option value="ncb_constant_spring_road">NCB: Constant Spring Road</option>
-            <option value="scotiabank_constant_spring_road">Scotiabank: Constant Spring Road</option>
-            <option value="tax_office_constant_spring_road">Tax Office: Constant Spring Road</option>
-        </select> -->
-
         <input type="submit" value="Explore Location" class="custom_button" id="submit">
 
     </form>
@@ -105,7 +97,7 @@
         document.getElementById("submit").addEventListener('click', function(e){
             e.preventDefault();
             const selectedParish = document.getElementById("parish").value;
-            set(ref(db, 'locations/' + selectedParish));
+            set(ref(db, selectedParish));
             // set(ref(db, 'locations/' + selectedParish),
             // {
             //     parish: selectedParish
