--- a/index.html
+++ b/index.html
@@ -97,10 +97,7 @@
         document.getElementById("submit").addEventListener('click', function(e){
             e.preventDefault();
             const selectedParish = document.getElementById("parish").value;
-            set(ref(db, 'locations/' + selectedParish),
-            {
-                parish: selectedParish
-            });
+            set(ref(db, 'locations/' + selectedParish), 0);
             // Show Location's Page
             window.location.href = 'location.html?selectedParish=${selectedParish}';
         });
