--- a/index.html
+++ b/index.html
@@ -47,19 +47,19 @@
 
         <label for="parish">Parish:</label>
         <select id="parish" name="parish">
-            <option value="ksa">Kingston & St. Andrew</option>
-            <option value="thomas">St. Thomas</option>
-            <option value="portland">Portland</option>
-            <option value="mary">St. Mary</option>
-            <option value="ann">St. Ann</option>
-            <option value="trelawny">Trelawny</option>
-            <option value="james">St. James</option>
-            <option value="hanover">Hanover</option>
-            <option value="westmoreland">Westmoreland</option>
-            <option value="elizabeth">St. Elizabeth</option>
-            <option value="manchester">Manchester</option>
-            <option value="clarendon">Clarendon</option>
-            <option value="catherine">St. Catherine</option>
+            <option value="Kingston & St. Andrew">Kingston & St. Andrew</option>
+            <option value="St. Thomas">St. Thomas</option>
+            <option value="Portland">Portland</option>
+            <option value="St. Mary">St. Mary</option>
+            <option value="St. Ann">St. Ann</option>
+            <option value="Trelawny">Trelawny</option>
+            <option value="St. James">St. James</option>
+            <option value="Hanover">Hanover</option>
+            <option value="Westmoreland">Westmoreland</option>
+            <option value="St. Elizabeth">St. Elizabeth</option>
+            <option value="Manchester">Manchester</option>
+            <option value="Clarendon">Clarendon</option>
+            <option value="St. Catherine">St. Catherine</option>
         </select>
 
         <input type="submit" value="Explore Location" class="custom_button" id="submit">
