correcting option values

--- a/index.html
+++ b/index.html
@@ -47,19 +47,19 @@
 
         <label for="parish">Parish:</label>
         <select id="parish" name="parish">
-            <option value="Kingston & St. Andrew">Kingston & St. Andrew</option>
-            <option value="St. Thomas">St. Thomas</option>
+            <option value="KingstonAndrew">Kingston & St. Andrew</option>
+            <option value="StThomas">St. Thomas</option>
             <option value="Portland">Portland</option>
-            <option value="St. Mary">St. Mary</option>
-            <option value="St. Ann">St. Ann</option>
+            <option value="StMary">St. Mary</option>
+            <option value="StAnn">St. Ann</option>
             <option value="Trelawny">Trelawny</option>
-            <option value="St. James">St. James</option>
+            <option value="StJames">St. James</option>
             <option value="Hanover">Hanover</option>
             <option value="Westmoreland">Westmoreland</option>
-            <option value="St. Elizabeth">St. Elizabeth</option>
+            <option value="StElizabeth">St. Elizabeth</option>
             <option value="Manchester">Manchester</option>
             <option value="Clarendon">Clarendon</option>
-            <option value="St. Catherine">St. Catherine</option>
+            <option value="StCatherine">St. Catherine</option>
         </select>
 
         <input type="submit" value="Explore Location" class="custom_button" id="submit">
