modified forst option value

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
         <label for="parish">Parish:</label>
         <select id="parish" name="parish">
-            <option value="KingstonAndrew">Kingston & St. Andrew</option>
+            <option value="KingstonStAndrew">Kingston & St. Andrew</option>
             <option value="StThomas">St. Thomas</option>
             <option value="Portland">Portland</option>
             <option value="StMary">St. Mary</option>
