trying again empty dictionary element

--- a/location.html
+++ b/location.html
@@ -36,7 +36,7 @@
         const locationDetails = document.getElementById('location-details');
         locationDetails.textContent = `Parish: ${selectedParish}`;
     </script>
-    <h1>Location</h1>
+    <h1>${selectedParish}</h1>
     <h2>Crowd Level</h2>
     <h2>Live Chat</h2>
     <h2>Submit Pictures</h2>
