--- a/location.html
+++ b/location.html
@@ -5,28 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Location</title>
-    <style>
-        body {
-            display: flex;
-            flex-direction: column;
-            justify-content: flex-start;
-            align-items: center;
-            min-height: 100vh;
-            margin: 0;
-        }
-        form {
-            display: flex;
-            flex-direction: column;
-            gap: 10px;
-        }
-        .logo {
-            width: 200px;
-            height: auto;
-        }
-    </style>
 </head>
 <body>
-    <img src="images/InLineJa_Logo.png" alt="Logo" class="logo">
+    <iframe src="header.html" style="border: none; width: 100%; height: 100px;"></iframe>
     <script>
         // Extract the parish from the URL query parameter
         const urlParams = new URLSearchParams(window.location.search);
