--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your Page Title</title>
+    <title>Home</title>
 </head>
 <body>
-    <iframe src="header.html" style="border: none; width: 100%; height: 100px;"></iframe>
+    <iframe src="header.html"></iframe>
     <!-- Rest of your index.html content goes here -->
 </body>
 </html>
