--- a/location.html
+++ b/location.html
@@ -7,7 +7,7 @@
     <title>Location</title>
 </head>
 <body>
-    <iframe src="header.html" style="border: none; width: 100%; height: 100px;"></iframe>
+    <iframe src="header.html"></iframe>
     <script>
         // Extract the parish from the URL query parameter
         const urlParams = new URLSearchParams(window.location.search);
