--- a/header.html
+++ b/header.html
@@ -11,8 +11,8 @@
             flex-direction: column;
             justify-content: flex-start;
             align-items: center;
-            min-height: 100vh;
-            margin: 0;
+            min-height: 100%;
+            margin: 20px 0;
         }
         form {
             display: flex;
