--- a/header.html
+++ b/header.html
@@ -12,7 +12,8 @@
             justify-content: flex-start;
             align-items: center;
             min-height: 100%;
-            margin: 20px 0;
+            margin: 0;
+            padding: 0;
         }
         form {
             display: flex;
