writing KingstonStAndrew dict to db

--- a/admin/update_locations.html
+++ b/admin/update_locations.html
@@ -5,6 +5,40 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Update Locations</title>
+    <style>
+        body {
+            display: flex;
+            flex-direction: column;
+            justify-content: flex-start;
+            align-items: center;
+            min-height: 100vh;
+            margin: 0;
+        }
+        form {
+            display: flex;
+            flex-direction: column;
+            gap: 10px;
+        }
+        .custom_logo {
+            width: 250px;
+            height: auto;
+        }
+        .custom_image {
+            width: 200px;
+            height: auto;
+        }
+        .custom_button {
+            background-color: #046A38; 
+            color: white;
+            padding: 10px 20px;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+        }
+        .custom_button:active {
+            background-color: black;
+        }
+    </style>
 </head>
 <body>
     <form>
@@ -48,7 +82,7 @@
                 "Scotiabank (Constant Spring Road": 0,
             }
 
-            set(ref(db, "KingstonStAndrew"), data);
+            set(ref(db, "KingstonStAndrew"), KingstonStAndrew);
         });
 
     </script>
