updated test data

--- a/admin/update_locations.html
+++ b/admin/update_locations.html
@@ -79,12 +79,72 @@
         document.getElementById("submit").addEventListener('click', function(e){
             e.preventDefault();
             const KingstonStAndrew = {
-                "KFC (Manor Park)": 0,
-                "Tax Office (Constant Spring Road)": 0,
-                "Scotiabank (Constant Spring Road)": 0,
+                "Test Location 1": 0,
+                "Test Location 2": 0,
+                "Test Location 3": 0
+            };
+            
+            const StThomas = {
+                "Test": 0
             };
 
-            set(ref(db, "KingstonStAndrew"), KingstonStAndrew);
+            const Portland = {
+                "Test": 0
+            };
+
+            const StMary = {
+                "Test": 0
+            };
+
+            const StAnn = {
+                "Test": 0
+            };
+
+            const Trelawny = {
+                "Test": 0
+            };
+
+            const StJames = {
+                "Test": 0
+            };
+
+            const Hanover = {
+                "Test": 0
+            };
+
+            const Westmoreland = {
+                "Test": 0
+            };
+
+            const StElizabeth = {
+                "Test": 0
+            };
+
+            const Manchester = {
+                "Test": 0
+            };
+
+            const Clarendon = {
+                "Test": 0
+            };
+
+            const StCatherine = {
+                "Test": 0
+            };
+
+            set(ref(db, "Kingston & St. Andrew"), KingstonStAndrew);
+            set(ref(db, "St. Thomas"), StThomas);
+            set(ref(db, "Portland"), Portland);
+            set(ref(db, "St. Mary"), StMary);
+            set(ref(db, "St. Ann"), StAnn);
+            set(ref(db, "Trelawny"), Trelawny);
+            set(ref(db, "St. James"), StJames);
+            set(ref(db, "Hanover"), Hanover);
+            set(ref(db, "Westmoreland"), Westmoreland);
+            set(ref(db, "St. Elizabeth"), StElizabeth);
+            set(ref(db, "Manchester"), Manchester);
+            set(ref(db, "Clarendon"), Clarendon);
+            set(ref(db, "St. Catherine"), StCatherine);
         });
 
     </script>
