--- a/admin/update_locations.html
+++ b/admin/update_locations.html
@@ -42,7 +42,6 @@
 </head>
 <body>
     <h1>Admin</h1>
-    <h2>Update Locations</h2>
     <form>
         <input type="submit" value="Update Locations" class="custom_button" id="submit">
     </form>
@@ -132,19 +131,19 @@
                 "Test": 0
             };
 
-            set(ref(db, "Kingston & St. Andrew"), KingstonStAndrew);
-            set(ref(db, "St. Thomas"), StThomas);
+            set(ref(db, "KingstonStAndrew"), KingstonStAndrew);
+            set(ref(db, "StThomas"), StThomas);
             set(ref(db, "Portland"), Portland);
-            set(ref(db, "St. Mary"), StMary);
-            set(ref(db, "St. Ann"), StAnn);
+            set(ref(db, "StMary"), StMary);
+            set(ref(db, "StAnn"), StAnn);
             set(ref(db, "Trelawny"), Trelawny);
-            set(ref(db, "St. James"), StJames);
+            set(ref(db, "StJames"), StJames);
             set(ref(db, "Hanover"), Hanover);
             set(ref(db, "Westmoreland"), Westmoreland);
-            set(ref(db, "St. Elizabeth"), StElizabeth);
+            set(ref(db, "StElizabeth"), StElizabeth);
             set(ref(db, "Manchester"), Manchester);
             set(ref(db, "Clarendon"), Clarendon);
-            set(ref(db, "St. Catherine"), StCatherine);
+            set(ref(db, "StCatherine"), StCatherine);
         });
 
     </script>
