--- a/location.html
+++ b/location.html
@@ -46,12 +46,8 @@
         // Extract the parish from the URL query parameter
         const urlParams = new URLSearchParams(window.location.search);
         const selectedParish = urlParams.get('selectedParish');
-
-        // Display the selected parish in the h1 tag
-    const selectedParishDisplay = document.getElementById('selectedParishDisplay');
-    selectedParishDisplay.textContent = selectedParish;
     </script>
-    <h1 id="selectedParishDisplay"></h1>
+    <h1>Location</h1>
     <h2>Crowd Level</h2>
     <h2>Live Chat</h2>
     <h2>Submit Pictures</h2>
