--- a/location.html
+++ b/location.html
@@ -48,9 +48,9 @@
         const urlParams = new URLSearchParams(window.location.search);
         const selectedParish = urlParams.get('selectedParish');
 
-        const active = document.getElementById('activeParish');
-        active.textContent = '${selectedParish}';
+        document.getElementById("activeParish").innerHTML = selectedParish;
     </script>
+    <h1 id="activeParish"></h1>
     <h1>Location</h1>
     <h2>Crowd Level</h2>
     <h2>Live Chat</h2>
