--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
             const selectedParish = document.getElementById("parish").value;
             // set(ref(db, selectedParish), 0);
             // Show Location's Page
-            window.location.href = 'location.html?selectedParish=${selectedParish}';
+            window.location.href = `location.html?selectedParish=${selectedParish}`;
         });
 
     </script>
